--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,33 +10,65 @@
     <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
-    <h1>Add to the Music Library</h1>
-    <div id="addPlayer">
-      <label for="artist">Artist</label>
-      <input type="text" id="js-input-artist" />
+    <header>
+      <h1>My Music Library</h1>
+    </header>
 
-      <label for="track">Track</label>
-      <input type="text" id="js-input-track" />
+    <div class="blocks">
+      <div>
+        <h2>Add to the Music Library</h2>
+        <div id="addPlayer">
+          <div class="field">
+            <label for="artist" class="field-label">Artist</label>
+            <input
+              type="text"
+              id="artist"
+              class="js-input-artist field-input"
+            />
+          </div>
 
-      <label for="rank">Rank</label>
-      <input type="number" id="js-input-rank" />
+          <div class="field">
+            <label for="track" class="field-label">Track</label>
+            <input type="text" id="track" class="js-input-artist field-input" />
+          </div>
 
-      <label for="published">Published</label>
-      <input type="text" id="js-input-published" />
+          <div class="field">
+            <label for="rank" class="field-label">Rank</label>
+            <input
+              type="number"
+              id="rank"
+              class="js-input-artist field-input"
+            />
+          </div>
 
-      <button id="js-add">Submit</button>
+          <div class="field">
+            <label for="published" class="field-label">Published</label>
+            <input
+              type="text"
+              id="published"
+              class="js-input-artist field-input"
+            />
+          </div>
+
+          <button id="js-add" class="btn">Submit</button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Current Library</h2>
+        <table id="js-tableWrapper" class="tableWrapper">
+          <thead>
+            <tr>
+              <th>Artist</th>
+              <th>Track</th>
+              <th>Rank</th>
+              <th>Published</th>
+            </tr>
+          </thead>
+          <tbody id="js-musicTableBody"></tbody>
+        </table>
+      </div>
     </div>
-    <h2>Current Library</h2>
-    <table id="js-tableWrapper" class="tableWrapper">
-      <thead>
-        <tr>
-          <th>Artist</th>
-          <th>Track</th>
-          <th>Rank</th>
-          <th>Published</th>
-        </tr>
-      </thead>
-      <tbody id="js-musicTableBody"></tbody>
-    </table>
+    <!-- END .blocks -->
   </body>
 </html>
