fixing FE post bug and adding PG to our server

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -29,16 +29,12 @@
 
           <div class="field">
             <label for="track" class="field-label">Track</label>
-            <input type="text" id="track" class="js-input-artist field-input" />
+            <input type="text" id="track" class="js-input-track field-input" />
           </div>
 
           <div class="field">
             <label for="rank" class="field-label">Rank</label>
-            <input
-              type="number"
-              id="rank"
-              class="js-input-artist field-input"
-            />
+            <input type="number" id="rank" class="js-input-rank field-input" />
           </div>
 
           <div class="field">
@@ -46,7 +42,7 @@
             <input
               type="text"
               id="published"
-              class="js-input-artist field-input"
+              class="js-input-published field-input"
             />
           </div>
 
